--- a/SmartTrip/package.json
+++ b/SmartTrip/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.3",
+    "@capacitor/google-maps": "^4.5.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
