--- a/SmartTrip/package.json
+++ b/SmartTrip/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-amazon": "ng serve --configuration amazon",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
