--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -3,11 +3,20 @@ micronaut:
     name: location
   server:
     cors:
-      enabled: true
+  security:
+    authentication: bearer
+    token:
+      jwt:
+        signatures:
+          secret:
+            generator:
+              secret: '"${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}"'
+
 endpoints:
   health:
     enabled: true
     sensitive: false
+
 #tag::otel[]
 otel:
   traces:
