Added providing secure login on backend and frontend.

--- a/SmartTrip/angular.json
+++ b/SmartTrip/angular.json
@@ -152,7 +152,8 @@
   },
   "cli": {
     "schematicCollections": [
-      "@ionic/angular-toolkit"
+      "@ionic/angular-toolkit",
+      "@schematics/angular"
     ],
     "analytics": false
   },
