--- a/SmartTrip/package.json
+++ b/SmartTrip/package.json
@@ -27,10 +27,9 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
-    "ngx-star-rating": "^2.1.0",
+    "ngx-bar-rating": "^5.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -45,7 +44,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.6.3",
+    "@capacitor/cli": "^4.8.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
