build files changed

--- a/SmartTrip/android/app/build.gradle
+++ b/SmartTrip/android/app/build.gradle
@@ -25,9 +25,9 @@ android {
 }
 
 repositories {
-    flatDir{
-        dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
-    }
+ //   flatDir{
+ //       dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
+  //  }
 }
 
 dependencies {
