Some frontend changes & bugs fixed

--- a/SmartTrip/android/app/src/main/AndroidManifest.xml
+++ b/SmartTrip/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBarLaunch"
             android:launchMode="singleTask"
-            android:exported="true">
+            android:exported="true"
+          android:windowSoftInputMode="stateHidden|adjustPan|adjustResize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
